# xnat-access

./: LICENSE  README.md  __init__.py  setup.cfg  setup.py
cli/: __init__.py  __main__.py  __version__.py  subjmove.py
downloadtools/: organizer.py  pgsqlutils.py  restutilities.py  sortme.py  utils.py  xnat2bids.py
samplesetup/: bashrc  netrc  profile
samplesetup/sampleloop/: samplecsv.csv  xnatloop.sh
