[metadata]
name=xnat-access
version=0.1.3
[options]
python_requires = >= 3.7

setup_requires=
    setuptools
install_requires =
    xnat>=0.4.2
    pandas>=1.5
    pydicom>=2.3
    dcm2niix
include_package_data=True
packages=find:
package_dir =
    =cli
    =downloadtools
[options.packages.find]
exclude =
    *.tests
    *.samplesetup
[options.entry_points]
console_scripts =
    xnat-tools=cli.__main__:main
    
