[metadata]
name=xnat-access
version=0.1.6.1
[options]
python_requires = >= 3.7

setup_requires=
    setuptools
install_requires =
    xnat>=0.4.2
    pandas>=1.5
    pydicom>=2.3
    dcm2niix
include_package_data=True
packages=find_namespace:
package_dir =
    =.
[options.packages.find]
where =.
exclude =
    *.tests
    *.samplesetup
[options.entry_points]
console_scripts =
    xnat-tools=cli.__main__:main
    
